# fifa_sorter

./: Cargo.toml
.github/workflows/: rust.yml
data/: ARQUIVOS CSV AQUI
src/: hash_table.rs  knowledge.rs  lib.rs  main.rs  models.rs  parser.rs  reading.rs  simple_uses.rs  terminal.rs
src/app/: actions.rs  mod.rs  state.rs  ui.rs
src/inputs/: events.rs  key.rs  mod.rs
src/io/: handler.rs  mod.rs
src/structures/: btree.rs  hash_table.rs  mod.rs  multi_tst.rs  tst.rs
