[package]
name = "fifa_sorter"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.dev]
opt-level = 3


[dependencies]
serde = { version = "1", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

log = "0.4"
csv = "1.1"
#TODO: iced = "0.4"
tracing-subscriber = "0.3"
reedline = { version = "0.11.0", optional = true }
tabled = { version = "0.8", optional = true }
terminal_size = { version = "0.2.1", optional = true }
[features]
default = ["terminal"]
terminal = ["reedline", "tabled", "terminal_size"]
