[package]
name = "fifa_sorter"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.dev]
opt-level = 3


[dependencies]
serde = { version = "1", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

csv = "1.1"
#TODO: iced = "0.4"
reedline = { version = "0.12.0", optional = true }
tabled = { version = "0.9.0", optional = true }
[features]
default = ["terminal"]
terminal = ["reedline", "tabled"] 
